# Encountr

./: .env  Cargo.toml  README.md  build.gradle.kts  build.rs  docker-compose.yml  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/dev/bittim/encountr/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/dev/bittim/encountr/: Encountr.kt  MainActivity.kt
app/src/main/java/dev/bittim/encountr/content/di/: ContentModule.kt
app/src/main/java/dev/bittim/encountr/core/di/: AppModule.kt  Constants.kt
app/src/main/java/dev/bittim/encountr/core/domain/: Paginator.kt
app/src/main/java/dev/bittim/encountr/core/ui/: RootNavGraph.kt
app/src/main/java/dev/bittim/encountr/onboarding/di/: OnboardingModule.kt
app/src/main/java/dev/bittim/encountr/onboarding/ui/: OnboardingNav.kt  OnboardingScreen.kt  OnboardingState.kt  OnboardingViewModel.kt
app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_logo.xml
app/src/main/res/raw/: definitions.json
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/test/java/dev/bittim/encountr/: ExampleUnitTest.kt
docs/: definitions.json  index.html
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
migrations/: 0001_init.sql
src/: crypt.rs  env.rs  error.rs  main.rs
src/db/: mod.rs
src/db/entity/: mod.rs  user.rs
src/db/repo/: mod.rs  user.rs
src/web/: mod.rs
src/web/auth/: login.rs  mod.rs  register.rs
(+309 files in other folders)
